// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Publication Details Component  should not render component with empty publication 1`] = `""`;

exports[`Publication Details Component  should render component 1`] = `
<WithStyles(Grid)
  item={true}
  xs={12}
>
  <StandardCard
    title="Type & Collection"
  >
    <Component
      data="Journal Article"
      heading="Type of work"
    />
    <Component
      data="Article (original research)"
      heading="Sub-type"
    />
    <Component
      data={
        <ul
          className="ul"
        >
          <li>
            <Link
              replace={false}
              to="/records/search?page=1&pageSize=20&sortBy=score&sortDirection=Desc&searchQueryParams%5Brek_ismemberof%5D%5Bvalue%5D%5B%5D=UQ%3A3825&searchMode=advanced"
            >
              School of Chemistry and Molecular Biosciences
            </Link>
          </li>
          <li>
            <Link
              replace={false}
              to="/records/search?page=1&pageSize=20&sortBy=score&sortDirection=Desc&searchQueryParams%5Brek_ismemberof%5D%5Bvalue%5D%5B%5D=UQ%3A218311&searchMode=advanced"
            >
              HERDC Pre-Audit
            </Link>
          </li>
          <li>
            <Link
              replace={false}
              to="/records/search?page=1&pageSize=20&sortBy=score&sortDirection=Desc&searchQueryParams%5Brek_ismemberof%5D%5Bvalue%5D%5B%5D=UQ%3A171723&searchMode=advanced"
            >
              UQ Centre for Clinical Research Publications
            </Link>
          </li>
        </ul>
      }
      heading="Collections"
    />
  </StandardCard>
</WithStyles(Grid)>
`;

exports[`Publication Details Component  should render with publication without collection data 1`] = `
<WithStyles(Grid)
  item={true}
  xs={12}
>
  <StandardCard
    title="Type & Collection"
  >
    <Component
      data="Journal Article"
      heading="Type of work"
    />
  </StandardCard>
</WithStyles(Grid)>
`;

exports[`Publication Details Component  should render with publication without subtype data 1`] = `
<WithStyles(Grid)
  item={true}
  xs={12}
>
  <StandardCard
    title="Type & Collection"
  >
    <Component
      data="Journal Article"
      heading="Type of work"
    />
    <Component
      data={
        <ul
          className="ul"
        >
          <li>
            <Link
              replace={false}
              to="/records/search?page=1&pageSize=20&sortBy=score&sortDirection=Desc&searchQueryParams%5Brek_ismemberof%5D%5Bvalue%5D%5B%5D=UQ%3A3825&searchMode=advanced"
            >
              School of Chemistry and Molecular Biosciences
            </Link>
          </li>
          <li>
            <Link
              replace={false}
              to="/records/search?page=1&pageSize=20&sortBy=score&sortDirection=Desc&searchQueryParams%5Brek_ismemberof%5D%5Bvalue%5D%5B%5D=UQ%3A218311&searchMode=advanced"
            >
              HERDC Pre-Audit
            </Link>
          </li>
          <li>
            <Link
              replace={false}
              to="/records/search?page=1&pageSize=20&sortBy=score&sortDirection=Desc&searchQueryParams%5Brek_ismemberof%5D%5Bvalue%5D%5B%5D=UQ%3A171723&searchMode=advanced"
            >
              UQ Centre for Clinical Research Publications
            </Link>
          </li>
        </ul>
      }
      heading="Collections"
    />
  </StandardCard>
</WithStyles(Grid)>
`;
